fix: change img width to min-width to fix img not scaling on firefox

--- a/css/style.css
+++ b/css/style.css
@@ -404,7 +404,7 @@ article {
 }
 
 .pop img {
-    width: 200%;
+    min-width: 200%;
 }
 
 .pop .ver-img {
@@ -721,10 +721,6 @@ footer a:hover {
 
     .pop .card {
         height: 170px;
-    }
-
-    .pop img {
-        width: 250%;
     }
     
     .pop .ver-img {
